log/build_2025-10-03_08-31-48/ros2_firebase_bridge/stdout_stderr.log
running egg_info
creating ../../build/ros2_firebase_bridge/ros2_firebase_bridge.egg-info
writing ../../build/ros2_firebase_bridge/ros2_firebase_bridge.egg-info/PKG-INFO
writing dependency_links to ../../build/ros2_firebase_bridge/ros2_firebase_bridge.egg-info/dependency_links.txt
writing entry points to ../../build/ros2_firebase_bridge/ros2_firebase_bridge.egg-info/entry_points.txt
writing requirements to ../../build/ros2_firebase_bridge/ros2_firebase_bridge.egg-info/requires.txt
writing top-level names to ../../build/ros2_firebase_bridge/ros2_firebase_bridge.egg-info/top_level.txt
writing manifest file '../../build/ros2_firebase_bridge/ros2_firebase_bridge.egg-info/SOURCES.txt'
reading manifest file '../../build/ros2_firebase_bridge/ros2_firebase_bridge.egg-info/SOURCES.txt'
writing manifest file '../../build/ros2_firebase_bridge/ros2_firebase_bridge.egg-info/SOURCES.txt'
running build
running build_py
creating /workspace/build/ros2_firebase_bridge/build
creating /workspace/build/ros2_firebase_bridge/build/lib
creating /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge
copying ros2_firebase_bridge/firebase_bridge_node.py -> /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge
copying ros2_firebase_bridge/firebase_client.py -> /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge
copying ros2_firebase_bridge/sensor_aggregator.py -> /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge
copying ros2_firebase_bridge/test_coordinates.py -> /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge
copying ros2_firebase_bridge/coordinate_converter.py -> /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge
copying ros2_firebase_bridge/__init__.py -> /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge
copying ros2_firebase_bridge/state_publisher.py -> /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge
running install
running install_lib
creating /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge
copying /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge/firebase_bridge_node.py -> /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge
copying /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge/firebase_client.py -> /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge
copying /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge/sensor_aggregator.py -> /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge
copying /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge/test_coordinates.py -> /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge
copying /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge/coordinate_converter.py -> /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge
copying /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge/__init__.py -> /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge
copying /workspace/build/ros2_firebase_bridge/build/lib/ros2_firebase_bridge/state_publisher.py -> /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge
byte-compiling /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge/firebase_bridge_node.py to firebase_bridge_node.cpython-310.pyc
byte-compiling /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge/firebase_client.py to firebase_client.cpython-310.pyc
byte-compiling /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge/sensor_aggregator.py to sensor_aggregator.cpython-310.pyc
byte-compiling /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge/test_coordinates.py to test_coordinates.cpython-310.pyc
byte-compiling /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge/coordinate_converter.py to coordinate_converter.cpython-310.pyc
byte-compiling /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge/__init__.py to __init__.cpython-310.pyc
byte-compiling /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge/state_publisher.py to state_publisher.cpython-310.pyc
  File "/workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge/state_publisher.py", line 27
    self.min_update_interval = 1.0  # seconds
                                   ^
SyntaxError: invalid non-printable character U+00A0

running install_data
creating /workspace/install/ros2_firebase_bridge/share/ament_index
creating /workspace/install/ros2_firebase_bridge/share/ament_index/resource_index
creating /workspace/install/ros2_firebase_bridge/share/ament_index/resource_index/packages
copying resource/ros2_firebase_bridge -> /workspace/install/ros2_firebase_bridge/share/ament_index/resource_index/packages
copying package.xml -> /workspace/install/ros2_firebase_bridge/share/ros2_firebase_bridge
creating /workspace/install/ros2_firebase_bridge/share/ros2_firebase_bridge/config
copying config/firebase_config.yaml -> /workspace/install/ros2_firebase_bridge/share/ros2_firebase_bridge/config
running install_egg_info
Copying ../../build/ros2_firebase_bridge/ros2_firebase_bridge.egg-info to /workspace/install/ros2_firebase_bridge/lib/python3.10/site-packages/ros2_firebase_bridge-0.0.1-py3.10.egg-info
running install_scripts
Installing coordinate_test script to /workspace/install/ros2_firebase_bridge/bin
Installing firebase_bridge script to /workspace/install/ros2_firebase_bridge/bin
writing list of installed files to '/workspace/build/ros2_firebase_bridge/install.log'
